crates/snapshot-tests/tests/snapshots/parser__bad_underscores__double.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidInteger]: invalid integer: underscores must be between two digits at `foo`
  ┌─ double:1:9
  │
1 │ foo = 0__0
  │         ^ invalid integer: underscores must be between two digits
